--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -24,6 +24,7 @@
     text-decoration: none;
     font-size: 20px;
     color: #3C190B;
+    cursor: pointer;
 }
 
 .header-nav ul .carShopAuto:hover{
