--- a/src/components/Produtos/Produtos.css
+++ b/src/components/Produtos/Produtos.css
@@ -17,6 +17,7 @@
     padding-bottom: 40px;
 }
 
+/* PRODUTO 1 */
 .produto-container-box1{
     background-color: #fff;
     border-radius: 20px;
@@ -80,6 +81,7 @@
     border-radius: 20px 20px 0px 0px;
 }
 
+/* PRODUTO 2 */
 .produto-container-box2{
     background-color: #97A284;
     border-radius: 20px;
@@ -145,6 +147,7 @@
     border-radius: 20px 20px 0px 0px;
 }
 
+/* PRODUTO 3 */
 .produto-container-box3{
     background-color: #874E50;
     border-radius: 20px;
