--- a/src/components/Slide/Slide.css
+++ b/src/components/Slide/Slide.css
@@ -1,74 +1,10 @@
-.slider-img{
+.slider .swiper-slide {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.slider{
+.slider img{
     width: 90%;
-    height: 600px;
-    overflow: hidden;
-    position: relative;
-    border-radius: 10px;
-    margin: 60px;
-}
-
-.slides{
-    display: flex;
-    width: 400%; /* esta em relação a quantas imagens tem no slider. Se fosse 5 imagens seria 500%*/
-    height: 100%;
-}
-
-.slide{
-    width: 25%; /* aqui nos temos o valor que passa de imagem. Basta fazer 100% / pelo numero de imagens em %. exemplo: 100% / 4 = 25%*/
-    transition: 0.5s;
-}
-
-.navigation-bar{
-    display: flex;
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translate(-50%);
-}
-
-input[type=radio]{
-    display: none;
-}
-
-.manual-btn{
-    border: 3px solid #fff;
-    padding: 10px;
     border-radius: 20px;
-    cursor: pointer;
-}
-
-.manual-btn:not(:last-child){
-    margin-right: 40px;
-}
-
-.manual-btn:hover{
-    background: #fff;
-    transition: 0.4s;
-}
-
-.slide img{
-    width: 100%;
-    height: 100%;
-}
-
-#radio1:checked ~ .first{
-    margin-left: 0; /* aqui voce vai fazendo o calculo de -valor para a imagem ir passando */
-}
-
-#radio2:checked ~ .first{
-    margin-left: -25%;
-}
-
-#radio3:checked ~ .first{
-    margin-left: -50%;
-}
-
-#radio4:checked ~ .first{
-    margin-left: -75%;
 }
